2. Поиск файлов по критерию [#783]